# Katalyst

./: .cursorignore  .env.example  .gitignore  CHANGELOG.md  ESCALATING_FEEDBACK_VERIFICATION.md  LITELLM_REMOVAL_TODO.md  README.md  TODO.md  docker-compose.yml  fix_kernel.py  pyproject.toml  pytest.ini  restart_kernel.py  test_conversation_agent.py  test_persistent_agent.py  test_todo_persistence.py
.github/workflows/: pypi-publish.yml  ruff.yml
.katalyst/bm25_index_20250610_125333/: corpus.jsonl  data.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
docs/: content_reference_logging.md  context_summarization.md  conversation_summarizer_usage.md  human_in_the_loop.md  ink-python-hybrid-architecture.md  ollama_guide.md  ollama_integration.md  ollama_integration_summary.md  ollama_usage.md  react.md  redundancy_protection.md  terminal-ui-improvement-plan.md  tool-caching.md
mytest/: add_multiple_numbers.py  divide_two_numbers.py
scripts/: analyze_prompt_sizes.py
src/: test_sample.py
src/app/: config.py  katalyst_runner.py  main.py  playbook_navigator.py
src/coding_agent/: main.py
src/katalyst_agent/: config.py  graph.py  katalyst_runner.py  main.py  routing.py  routing_keys.py
src/katalyst_core/: graph.py  routing.py
tests/: TESTS.md  test_apply_diff.py  test_ask_followup_question.py  test_content_reference.py  test_execute_command.py  test_list_code_definitions.py  test_list_files.py  test_search_files.py  test_write_to_file.py
tests/agent/: test_ollama_model_benchmark.py
tests/agent_tests/: test_framework.py  test_rubric.py  test_suite.py  test_utils.py
tests/e2e/: test_framework.py  test_ollama_model_benchmark.py  test_persistent_agent_manual.py  test_rubric.py  test_utils.py
tests/functional/: run_tests.py  test_cli.py  test_framework.py  test_generate_directory_overview.py  test_playbook_navigator.py  test_rubric.py  test_suite.py  test_summarize_code_structure.py
tests/integration/: test_action_trace_state_compression.py  test_adaptive_planning.py  test_escalating_feedback_flow.py  test_human_plan_verification_flow.py  test_list_files_cache_integration.py  test_ollama_provider.py  test_persistent_agent.py  test_persistent_agent_simple.py  test_read_file_cache_integration.py  test_sandbox_integration.py  test_tool_repetition_detection.py
tests/unit/: test_action_trace_compression.py  test_apply_source_code_diff.py  test_apply_source_code_diff_fuzzy.py  test_attempt_completion.py  test_chat_history_compression.py  test_consecutive_block_detection.py  test_consecutive_duplicate_detection.py  test_content_reference.py  test_create_subtask.py  test_create_subtask_validation.py  test_deterministic_state_tracking.py  test_error_formatting_preservation.py  test_execute_command.py  test_generate_directory_overview.py  test_human_plan_verification.py  test_list_code_definitions.py  test_list_files.py  test_list_files_cache.py  test_llm_config.py  test_llm_config_ollama.py  test_llms_service.py  test_observation_processing.py  test_operation_context.py  test_read_file.py  test_redundancy_protection_integration.py  test_request_user_input.py  test_search_files.py  test_summarize_code_structure.py  test_summarizer.py  (+2 more)
todo/: CLAUDE.md  TODO.md
(+247 files in other folders)
