[project]
name = "katalyst"
version = "0.9.1"
description = "A terminal coding agent for Python."
authors = [{name = "Maruti Agarwal", email = "marutiagarwal@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openai==1.97.0",
    "langgraph==0.5.3",
    "langchain-core==0.3.69",
    "python-dotenv==1.1.1",
    "langchain-openai==0.3.28",
    "pathspec==0.12.1",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "rich==14.0.0",
    "instructor==1.10.0",
    "bm25s==0.2.13",
    "langchain-ollama==0.3.5",
    "langchain-anthropic==0.3.17",
    "simple-term-menu==1.6.6",
    "langgraph-checkpoint-sqlite==2.0.10",
    "langmem==0.0.28",
    "langgraph-supervisor (>=0.0.28,<0.0.29)",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "opentelemetry-exporter-otlp (>=1.36.0,<2.0.0)",
    "openinference-instrumentation-langchain (>=0.1.49,<0.2.0)",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "optuna>=3.6.0",
]

[project.scripts]
katalyst = "katalyst.app.main:main"

[project.optional-dependencies]
test = [
    "pytest==8.4.0",
    "pytest-cov==6.2.1",
    "pytest-asyncio==1.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [
    { include = "katalyst", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
openai = "1.97.0"
langgraph = "0.5.3"
langchain-core = "0.3.69"
python-dotenv = "1.1.1"
langchain-openai = "0.3.28"
pathspec = "0.12.1"
tree-sitter = "0.21.3"
tree-sitter-languages = "1.10.2"
rich = "14.0.0"
pytest = "8.4.0"
instructor = "1.10.0"
pytest-cov = "6.2.1"
pytest-asyncio = "1.0.0"
thefuzz = "0.22.1"
bm25s = "0.2.13"
langchain-ollama = "0.3.5"
langchain-anthropic = "0.3.17"
simple-term-menu = "1.6.6"
langgraph-checkpoint-sqlite = "2.0.10"
jupyter-client = "^8.6.0"
ipykernel = "^6.29.0"
langmem = "0.0.28"
pandas = "^2.2.0"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
scikit-learn = "^1.5.0"
optuna = "^3.6.0"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]